# z_all

./: .gitignore  ACTUAL_STATUS_REPORT.md  COMPARISON_SUMMARY.md  CONTRIBUTING.md  DEMO.md  README.md  SPEC_COMPLIANCE_ANALYSIS.md  TEST_RESULTS_SUMMARY.md  THREE_WAY_COMPARISON_REPORT.md  benchmark.sh  project_spec.md  spec.md
zapier_python/: .env.example  .gitignore  Dockerfile  OPTIMIZATION_SUMMARY.md  PERFORMANCE.md  PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_TEST_RESULTS.md  README.md  alembic.ini  create_tables.py  docker-compose.yml  fly.toml  gunicorn.conf.py  hello.py  performance_test.py  pyproject.toml  setup_benchmark_org.py  start_optimized.sh  start_production.sh
zapier_python/.taskmaster/: state.json
zapier_python/.taskmaster/docs/: prd-init.md
zapier_python/.taskmaster/reports/: task-complexity-report.json
zapier_python/.taskmaster/tasks/: tasks.json
zapier_python/alembic/: env.py
zapier_python/alembic/versions/: 001_initial_schema.py
zapier_python/log_docs/: PROJECT_LOG_2025-11-10_initial-infrastructure-and-auth.md  PROJECT_LOG_2025-11-10_performance-optimization.md  PROJECT_LOG_2025-11-11_fastapi-test-infrastructure.md  PYTHON_LOG_2025-11-10_io-optimization.md  current_progress.md
zapier_python/scripts/: benchmark_performance.py
zapier_python/src/zapier_triggers_api/: __init__.py  auth.py  auth_cached.py  config.py  database.py  main.py  middleware.py  models.py  rate_limit.py  redis_client.py  schemas.py  worker.py
zapier_python/tests/: __init__.py  conftest.py  test_auth.py  test_comprehensive_performance.py  test_main.py  test_performance.py
zapier_rust/: .env.example  .gitignore  Cargo.toml  Dockerfile  FLY_IO_DEPLOYMENT.md  GETTING_STARTED.md  IMPLEMENTATION_STATUS.md  PERFORMANCE_OPTIMIZATIONS.md  QUICK_REFERENCE.md  README.md  UPDATES_SUMMARY.md  fly.toml  load_test.js
zapier_rust/.taskmaster/: CURRENT_STATUS.md  TASK_MASTER_SYNC_COMPLETE.md  config.json  progress_update_2025-11-10.md  state.json
zapier_rust/.taskmaster/docs/: prd-init.md
zapier_rust/.taskmaster/reports/: task-complexity-report.json
zapier_rust/.taskmaster/tasks/: tasks.json
zapier_rust/benches/: event_ingestion.rs
zapier_rust/log_docs/: PROJECT_LOG_2025-11-10_rust-mvp-complete.md  PROJECT_LOG_2025-11-11_rust-build-fixes-and-testing.md  current_progress.md
zapier_rust/migrations/: 001_organizations.sql  002_events.sql  003_event_deliveries.sql  004_deduplication_cache.sql
zapier_rust/scripts/: setup-local.sh  test-api.sh
zapier_rust/src/: auth_cache.rs  config.rs  error.rs  event_processor.rs  main.rs  metrics.rs  state.rs
zapier_rust/src/handlers/: events.rs  health.rs  keys.rs  mod.rs
zapier_rust/src/middleware/: auth.rs  mod.rs
zapier_rust/src/models/: delivery.rs  event.rs  mod.rs  organization.rs
zapier_rust/tests/: integration_test.rs
(+167 files in other folders)
